# pylint_singular_it

./: .releaserc  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: test.yml
example_extension/: README.md  setup.cfg
example_extension/src/: example_extension.py
pylint_sit/: README.md  requirements.txt  setup.cfg
pylint_sit/src/: pylint_sit.py
