[metadata]
name = pylint_sit
version = pyproject.toml:version
description = Pylint configuration for singularIT GmbH
long_description = file: README.md
long_description_content_type = text/markdown
author = singularIT GmbH
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    pylint>=2.14.1
python_requires = >=3.8
package_dir =
    =src

[options.packages.find]
where = src

[semantic_release]
version_variable=pyproject.toml:version
upload_to_pypi=False
upload_to_release=True
branch=main
version_source=tag